added redirecting to current ride when driver clicks start on schedule ride reminder dialog

--- a/HopIn/src/app/toolbar/toolbar.component.css
+++ b/HopIn/src/app/toolbar/toolbar.component.css
@@ -189,6 +189,8 @@ a {
     .current-ride-btn {
         border-radius: 0;
         margin-right: 0;
+        margin-left: 0;
+        width: 100%;
     }
     .navbar-toggler {
         display: block;
