--- a/HopIn/src/app/driver-info-card/driver-info-card.component.css
+++ b/HopIn/src/app/driver-info-card/driver-info-card.component.css
@@ -49,7 +49,7 @@ p {
 }
 
 #info {
-    margin-left: 30px;
+    margin-left: 20px;
 }
 
 #wheel {
@@ -57,6 +57,7 @@ p {
     padding-right: 12px;
     background-color: #DCDCDC;
     height: 100%;
+    border-radius: 7px 0 0 7px;
     width: 12%;
     display: flex;
 }
