--- a/HopIn/src/app/ride-history-details/ride-history-details.component.html
+++ b/HopIn/src/app/ride-history-details/ride-history-details.component.html
@@ -8,7 +8,7 @@
     <div id="lower">
         <div class="left">
             <app-driver-info-card></app-driver-info-card>
-            <app-passengers-info-card></app-passengers-info-card>
+            <app-passengers-info-card [parentComponent]="parentComponent"></app-passengers-info-card>
         </div>
         <div class="right">
             <app-ratings-card></app-ratings-card>
