--- a/HopIn/src/app/ride-info-card/ride-info-card.component.html
+++ b/HopIn/src/app/ride-info-card/ride-info-card.component.html
@@ -4,7 +4,7 @@
             <div id="carImg">
                 <img src="../../assets/vectors/car.svg">
             </div>
-            <h4>{{ ride.locations[0].departure.address + " -> " + ride.locations[0].destination.address }}</h4>
+            <h4>{{ departure + " -> " + destination }}</h4>
         </div>
 
         <div class="row">
@@ -12,7 +12,7 @@
                 <img src="../../assets/vectors/calendar-alt.svg">
             </div>
             <p class="key">Start time: </p>
-            <p class="value">{{ ride.startTime }}</p>
+            <p class="value">{{ parseDate(ride.startTime) }}</p>
         </div>
 
         <div class="row">
@@ -20,7 +20,7 @@
                 <img src="../../assets/vectors/calendar-alt.svg">
             </div>
             <p class="key">End time: </p>
-            <p class="value">{{ ride.endTime }}</p>
+            <p class="value">{{ parseDate(ride.endTime) }}</p>
         </div>
 
         <div class="row">
@@ -45,11 +45,5 @@
             </div>
             <p class="key">Price(RSD): </p>
             <p class="value">{{ ride.totalCost }}</p>
-        </div>
-    </div>
-
-    <div id="right">
-        <div class="row">
-            <div class="rightImgContainer"><img src="../../assets/vectors/chatIcon.svg"></div>
         </div>
     </div>
