--- a/HopIn/src/app/passengers-info-card/passengers-info-card.component.css
+++ b/HopIn/src/app/passengers-info-card/passengers-info-card.component.css
@@ -1,5 +1,5 @@
 #card {
-    width: 100%;
+    width: 37vw;
     height: fit-content;
     display: flex;
     flex-direction: row;
@@ -78,6 +78,7 @@ h4 {
     padding-right: 12px;
     background-color: #DCDCDC;
     /* height: 100%; */
+    border-radius: 7px 0 0 7px;
     width: 12%;
     display: flex;
     margin-right: 1em;
