--- a/HopIn/src/app/ratings-card/ratings-card.component.css
+++ b/HopIn/src/app/ratings-card/ratings-card.component.css
@@ -3,7 +3,7 @@
     height: fit-content;
     display: flex;
     flex-direction: column;
-    border: 2px solid #E6E6E6;
+    border: 1px solid #E6E6E6;
     border-radius: 10px;
     background-color: white;
     padding: 5px;
@@ -11,16 +11,33 @@
 
 h2 {
     margin-left: 3%;
+    color: #1E4A5A;
+
 }
 
 #reviewCard {
     width: 90%;
     margin-left: auto;
-    margin-right: auto;
     border: 2px solid #E6E6E6;
+    margin-right: auto;
     border-radius: 10px;
     padding: 10px;
     margin-bottom: 2vh;
+}
+
+.legend{
+    margin: 20px 5px 0 5px;
+    display: inline-block;
+    text-align: center;
+    padding: 3px 3px 0 3px;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    color: white
+}
+
+.blue-border {
+    border: 2px solid #1E4A5A !important;
 }
 
 .row {
