--- a/HopIn/src/app/ratings-card/ratings-card.component.html
+++ b/HopIn/src/app/ratings-card/ratings-card.component.html
@@ -1,9 +1,12 @@
 <div id="card">
-    <div class="row">
+    <div class="row" style="justify-content: space-between;">
         <h2>Ratings: </h2>
-        <button *ngIf="this._role === 'ROLE_PASSENGER'" id="dialogOpenBtn" (click)="openDialog()">Add</button>    
+        <div>
+            <div class="back-darker-gray legend">V</div> 
+            <div class="back-dark-blue legend">D</div>
+        </div>
     </div>
-    <div id="reviewCard" class="row" *ngFor="let review of reviews; let indexOfelement=index;">
+    <div id="reviewCard" class="row" [ngClass]="{'blue-border': type[indexOfelement] === 'driverType'}" *ngFor="let review of reviews; let indexOfelement=index;">
         <p class="key">{{ passengers[indexOfelement].name + ':' }}</p>
         <p class="value">{{ review.comment }}</p>
         <div id="stars">
