--- a/HopIn/src/app/pickup-destination-form/pickup-destination-form.component.html
+++ b/HopIn/src/app/pickup-destination-form/pickup-destination-form.component.html
@@ -1,8 +1,8 @@
-<div id="unreg-ride-container" class="border">
+<div id="unreg-ride-container" class="border" [ngClass]="{'padding-unreg-top' : this.authService.getRole() == null}">
     <div id="heart" *ngIf="this.isFavorite === true" (click)="removeRoute()">                
         <img class="favourite" src="../../assets/vectors/heart_red.svg">
     </div>
-    <div id="heart" *ngIf="this.isFavorite === false" (click)="returnRoute()">
+    <div id="heart" *ngIf="this.authService.getRole() != null && this.isFavorite === false" (click)="returnRoute()">
         <img class="favourite" src="../../assets/vectors/heart_empty.svg">
     </div>
     <h3 id="tell-us" class="dark-blue">Tell us about the ride:</h3>
