added missing id's:

--- a/HopIn/src/app/driver-info-card/driver-info-card.component.html
+++ b/HopIn/src/app/driver-info-card/driver-info-card.component.html
@@ -6,7 +6,7 @@
         <p id="name">{{ driver.name + ' ' + driver.surname }}</p>
         <div class="row">
             <p class="key">email:</p>
-            <p class="value">{{ driver.email }}</p>
+            <p class="value" id="driver-email">{{ driver.email }}</p>
         </div>
         <div class="row">
             <p class="key">phone num:</p>
