--- a/HopIn/src/app/passengers-info-card/passengers-info-card.component.html
+++ b/HopIn/src/app/passengers-info-card/passengers-info-card.component.html
@@ -13,7 +13,7 @@
                     <p id="name">{{passenger.name + ' ' + passenger.surname}}</p>
                     <div class="row mu">
                         <p class="key">email:</p>
-                        <p class="value">{{passenger.email}}</p>
+                        <p class="value" id="passenger-email">{{passenger.email}}</p>
                     </div>
                     <div class="row mb">
                         <p class="key">phone num:</p>
