--- a/HopIn/src/app/rejection-reason-dialog/rejection-reason-dialog.component.html
+++ b/HopIn/src/app/rejection-reason-dialog/rejection-reason-dialog.component.html
@@ -1,4 +1,4 @@
-<div>
+<div id="rejection-dialog">
     <h1 *ngIf="!isCurrentRide" mat-dialog-title align="center" class="dark-blue">Ride rejection reason</h1>
     <h1 *ngIf="isCurrentRide" mat-dialog-title align="center" class="dark-blue">Ride cancelation reason</h1>
       <div mat-dialog-content align="center">
