--- a/HopIn/src/app/route-suggestion-details/route-suggestion-details.component.html
+++ b/HopIn/src/app/route-suggestion-details/route-suggestion-details.component.html
@@ -27,7 +27,7 @@
     <div class="content-container">
         <div>
             <p class="dark-blue small-title" >At:</p>
-            <p id="destination-location" class="card-content">{{ formatDate(route.scheduledTimeFormatted) }}</p>
+            <p id="scheduled-time" class="card-content">{{ formatDate(route.scheduledTimeFormatted) }}</p>
         </div>
     </div>
 </div>
