--- a/HopIn/src/app/ride-review/ride-review.component.html
+++ b/HopIn/src/app/ride-review/ride-review.component.html
@@ -44,6 +44,7 @@
         </div>
     </div>
     
+    <button mat-button class="conf-button back-darker-gray white" id="closeBtn" (click)="close()">Close</button>
     <button mat-button class="conf-button" (click)="submit()">Submit</button>
     </form>
 </div>
